# MSCIT

./: .gitignore
4/Lab1/: CMakeLists.txt  test.cpp
4/Lab1/src/MainWidget/: MainWidget.cpp  MainWidget.h  MainWidget.ui
4/Lab1/src/MainWindow/: MainWindow.cpp  MainWindow.h
4/Lab1/src/Parser/: MyRecursiveASTVisitor.hpp  parser.cpp  parser.h
4/Lab2/: CMakeLists.txt  test.cpp
4/Lab2/src/: main.cpp
4/Lab2/src/MainWidget/: MainWidget.cpp  MainWidget.h  MainWidget.ui
4/Lab2/src/MainWindow/: MainWindow.ui
4/Lab2/src/Parser/: MetricsCalculatorASTConsumer.hpp  MyRecursiveASTVisitor.hpp  parser.cpp  parser.h
4/Lab3/: CMakeLists.txt
4/Lab3/src/: main.cpp
4/Lab3/src/MainWidget/: MainWidget.cpp  MainWidget.h  MainWidget.ui
4/Lab3/src/MainWindow/: MainWindow.cpp  MainWindow.h
4/Lab3/src/Parser/: MetricsCalculatorAction.hpp  MyRecursiveASTVisitor.hpp  parser.cpp  parser.h
4/Labs/: Labs.sln
4/Labs/Lab1/: Lab1.rc  Lab1.vcxproj  Lab1.vcxproj.filters  MainWidget.cpp  MainWidget.h  MainWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
